<resources>
    <string name="app_name">AirJ18 Booking App</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoic2FuZzAxMCIsImEiOiJjbDJxYXprZnMwMDl3M2RxaHhhbTF4Zm44In0.0CEOCvmscPFaE79KvWPTIQ</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_back" translatable="false">Welcome back</string>
    <string name="title_activity_map_view" translatable="false">MapViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="date_activity_title" translatable="false">Select date</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="booked">Booking history</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="language">Language</string>
    <string name="chart">Chart</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="yourFavorite">Your Favorite</string>
    <string name="notificationNotFound">Not Found</string>
    <string name="pdf">Print PDF</string>
    <string name="changLanguage">Do you want to restart the app to change the language?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="room_not_available">The room is not available at this time.</string>
</resources>